--- a/css/style.css
+++ b/css/style.css
@@ -28,14 +28,20 @@ body {
     display: flex;
     justify-content: center;
     z-index: 0;
+    border-radius: 30em/7em;
+    border-top-left-radius: 8%;
+    border-top-right-radius: 8%;
 }
 
 .gb-body2 {
     background-color: rgb(254, 206, 117);
-    height: 450px;
-    width: 200px;
+    height: 470px;
+    width: 205px;
     position: absolute;
     z-index: -10;
+    border-radius: 30em/7em;
+    border-top-left-radius: 0%;
+    border-top-right-radius: 0%;
 }
 
 .gb-body-elements {
@@ -49,41 +55,233 @@ body {
     text-align: center;
     }
 
-    .box {
-        background-color: blueviolet;
+.box {
+       /* background-color: blueviolet; */
     }
 
-    .box-top {
+.box-top {
         grid-column: 1 / 5;
         display: flex;
         justify-content: center;
         align-items: flex-end;
     }
 
-    .box-central {
+.box-central {
         grid-column: 2 / 4;
         display: flex;
         justify-content: center;
         align-items: center;
     }
 
-    .ninten-logo {
+.box-6 {
+        grid-column: 1 / 5;
+        border-radius: 30em/7em;
+        border-top-left-radius: 0%;
+        border-top-right-radius: 0%;
+        display: flex;
+        justify-content: flex-end;
+    }
+
+
+
+.speaker {
+        margin: 15px 20px 0 0;
+        width: 70px;
+        height: 70px;
+        transform: skewY(-10deg);
+    }
+
+.speaker-grid {
+        display: grid;
+        width: 100%;
+        height: 100%;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    }
+
+.speaker-dots {
+        transform: skewY(10deg);
+        width: 4px;
+        height: 4px;
+        border-radius: 50%;
+        border: 1px inset;
+    }
+
+.select-start {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-right: 21px;
+}    
+
+.bt-st-top {
+    width: 70px;
+    display: flex;
+    margin: 9px;
+    gap: 15px;
+}
+
+.bt-st {
+    background-color: grey;
+    width: 31px;
+    height: 10px;
+    border-radius: 3em/2em;
+    border: outset rgb(165, 164, 164);
+}    
+
+.bt-st-bottom {
+    display: flex;
+    justify-content: center;
+    gap: 5px;
+}
+
+.st-text {
+    font-size: 12px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: orange;
+    text-shadow: -1px -1px 1px rgb(243, 193, 102);
+    margin-right: 2px;
+}
+
+
+.dot2 {
+        background-color: rgb(148, 104, 22);
+    }
+
+.dot1 {
+        background-color: rgb(234, 169, 49);
+    }
+
+
+.dot-n {
+        background-color: transparent;
+        border: none;
+    }
+
+.ninten-logo {
         width: 80px;
     }
 
-    .box-left {
+.box-left {
         grid-column: 1 / 3;
+        display: flex;
+        justify-content: center;
     }
 
-    .box-right {
+
+    /* / CRUCETA / */
+
+.cross {
+        width: 72px;
+        height: 72px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        margin-left: -25px;
+    }
+
+.cross1 {
+        background-color: none;
+    }
+
+.cross-central {
+    background: linear-gradient(to right, grey, rgb(77, 76, 76));
+    }
+
+.cross-top {
+    background: linear-gradient(to right, grey, rgb(77, 76, 76));
+    border-top: outset 2px rgb(60, 60, 60);
+    border-left: outset 2px rgb(82, 82, 82);
+    border-right: outset 2px rgb(60, 60, 60);
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+}
+.cross-bottom {
+    background: linear-gradient(to right, grey, rgb(77, 76, 76));
+    border-bottom: outset 2px rgb(60, 60, 60);
+    border-left: outset 2px rgb(72, 71, 71);
+    border-right: outset 2px rgb(60, 60, 60);
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+
+.cross-right {
+    background: linear-gradient(to right, rgb(77, 76, 76), rgb(116, 116, 116));
+    border-bottom: outset 2px rgb(60, 60, 60);
+    border-top: outset 2px rgb(60, 60, 60);
+    border-right: outset 2px rgb(33, 33, 33);
+    border-bottom-right-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+.cross-left {
+    background: linear-gradient(to right, rgb(178, 178, 178), grey);
+    border-bottom: outset 2px rgb(60, 60, 60);
+    border-top: outset 2px rgb(60, 60, 60);
+    border-left: outset 2px rgb(81, 81, 81);
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+
+
+.triangle {
+    width: 0;
+    height: 0;
+    border-left: 12px solid black;
+    border-top: 6px solid transparent;
+    border-bottom: 6px solid transparent;
+}
+
+.cross-triangles {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.triangle-top {
+    transform: rotate(-90deg);
+}
+
+.triangle-left {
+    transform: rotate(180deg);
+
+}
+
+.triangle-bottom {
+    transform: rotate(90deg);
+}
+
+.circle-cross {
+    background-color: black;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    border: inset 2px rgb(180, 180, 180);
+}
+
+.box-right {
         grid-column: 3 / 5;
+        display: flex;
+        justify-content: flex-end;
+        padding-right: 16px;
+    }
+
+.button {
+        background-color: grey;
+        height: 36px;
+        width: 36px;
+        border-radius: 50%;
+        margin: 9px;
+    }
+
+.button-b {
+        margin-top: 20px;
     }
 
 /* / PANTALLA / */
 
 
 .screen {
-    background-color: grey;
     width: 270px;
     height: 234px;
     display: grid;
@@ -136,6 +334,9 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    border-radius: 50em/6em;
+    border-top-left-radius: 0%;
+    border-top-right-radius: 0%;
 }
 
 .logo1 {
