--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,13 @@
 body {
-    background-color: aqua;
+    background-color: rgb(0, 0, 0);
     margin: 0;
 }
 
 /* /// CUERPO DE LA WEB /// */
 
 .main {
-    background-image: url(../img/wood-background.webp);
+ /*   background-image: url(../img/wood-background.webp); */
+    background-image: url(../img/texture-seamless-wood-5.jpeg);
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -30,7 +31,7 @@ body {
     border-radius: 30em/7em;
     border-top-left-radius: 8%;
     border-top-right-radius: 8%;
-    box-shadow: 50px 50px 50px rgba(35, 19, 1, 0.689);
+    box-shadow: 50px 50px 50px rgba(23, 12, 0, 0.689);
 
 }
 
