--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,16 @@
 body {
-    background-color: rgb(0, 0, 0);
+    background-image: url(../img/texture-seamless-wood-5.jpeg);
     margin: 0;
+    display: flex;
 }
 
 /* /// CUERPO DE LA WEB /// */
 
 .main {
- /*   background-image: url(../img/wood-background.webp); */
-    background-image: url(../img/texture-seamless-wood-5.jpeg);
-    height: 100vh;
     display: flex;
-    justify-content: center;
+    width: 100vw;
+    justify-content:center;
+    margin-top: 15vh;
 }
 
 /* // CUERPO DE LA CONSOLA // */
@@ -18,7 +18,7 @@ body {
 
 .body-gb {
     display: flex;
-    margin-top: 10vh;
+    width: fit-content;
 }
 
 .gb-body1 {
@@ -388,6 +388,8 @@ body {
 /* / PANTALLA / */
 
 
+
+
 .screen {
     width: 270px;
     height: 234px;
@@ -493,4 +495,132 @@ body {
     border-top: 5px solid transparent;
     border-bottom: 5px solid transparent;
     transform: rotate(-90deg);
+}
+
+.cratridge-container {
+    display: flex;
+    margin-top: 50px;
+    margin-left: 50px;
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+    height: fit-content;
+    box-shadow: 50px 50px 50px rgba(23, 12, 0, 0.689);
+}
+
+.cratridge-container:hover {
+    transform: scale(1.2);
+    transition: 1s;
+}
+
+.cartridge {
+    background-color: rgb(255, 195, 44);
+    border-radius: 5px;
+    border-top-left-radius: 0px;
+    width: 203px;
+    height: 213px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    
+}
+
+#recorte {
+    background-color: rgb(255, 195, 44);
+    border-top-left-radius: 5px;
+    border-top-right-radius: 4px;
+    width: 185px;
+    height: 12px;
+}
+
+.contenedor-texto {
+    margin-top: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.linea {
+    position: relative;
+    z-index: 20;
+}
+
+.linea1 {
+    background-color: rgb(255, 195, 44);
+    width: 203px;
+    height: 5px;
+    margin-top: 3px;
+    border: inset rgb(255, 195, 44);
+}
+
+.textosuperior{
+    background: linear-gradient(to bottom, rgb(255, 195, 44), rgb(228, 163, 51));
+    width: 165px;
+    height: 50px;
+    position: absolute;
+    z-index: 30;
+    border-radius: 30px;
+    border: outset rgba(255, 220, 133, 0.504);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#logocartucho {
+    width: 90%;
+    filter: brightness(80%);
+}
+
+.cartucho-bajo {
+    background-color: rgb(255, 195, 44);
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+.bisel-car {
+    background: linear-gradient(to right, rgb(255, 195, 44), rgb(221, 169, 37));
+    height: 140px;
+    width: 10px;
+    border-bottom-left-radius: 5px;
+}
+
+.bisel-car2 {
+    background: linear-gradient(to left, rgb(255, 195, 44), rgb(221, 169, 37));
+    height: 140px;
+    width: 10px;
+    border-bottom-right-radius: 5px;
+}
+
+.imagencentral {
+    background-color: rgb(255, 195, 44);
+    width: 160px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    margin-top: 10px;
+
+}
+
+#pokemon {
+    width: 100%;
+}
+
+.triangle-car {
+    width: 0;
+    height: 0;
+    border-left: 18px solid rgba(222, 137, 0, 0.82);
+    border-top: 16px solid transparent;
+    border-bottom: 16px solid transparent;
+    transform: rotate(90deg);
+}
+
+.pika {
+    background-image: url(../img/pika.gif);
+    background-size: cover;
 }
